; ModuleID = '/home/carl/AnghaBench/tmux/extr_grid-view.c_grid_view_get_cell.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_grid-view.c_grid_view_get_cell.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grid = type { i32 }
%struct.grid_cell = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @grid_view_get_cell(%struct.grid* %0, i32 %1, i32 %2, %struct.grid_cell* %3) #0 {
  %5 = alloca %struct.grid*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.grid_cell*, align 8
  store %struct.grid* %0, %struct.grid** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store %struct.grid_cell* %3, %struct.grid_cell** %8, align 8
  %9 = load %struct.grid*, %struct.grid** %5, align 8
  %10 = load %struct.grid*, %struct.grid** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @grid_view_x(%struct.grid* %10, i32 %11)
  %13 = load %struct.grid*, %struct.grid** %5, align 8
  %14 = load i32, i32* %7, align 4
  %15 = call i32 @grid_view_y(%struct.grid* %13, i32 %14)
  %16 = load %struct.grid_cell*, %struct.grid_cell** %8, align 8
  %17 = call i32 @grid_get_cell(%struct.grid* %9, i32 %12, i32 %15, %struct.grid_cell* %16)
  ret void
}

declare dso_local i32 @grid_get_cell(%struct.grid*, i32, i32, %struct.grid_cell*) #1

declare dso_local i32 @grid_view_x(%struct.grid*, i32) #1

declare dso_local i32 @grid_view_y(%struct.grid*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
